--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,24 @@
-    <%- include ("./parts/head.ejs") %>
 
-  <body>
-    <%- include ("./parts/nav.ejs") %>
-    <%- include ("./parts/menu.ejs")%>
-    <div id="item-2">
-         <h1>Aqui dados de cadastro de pessoas e verificação de cadastrados</h1>
-    </div>
-    <%- include ("./parts/rodape.ejs") %>
+<%- include ("./parts/head.ejs") %>
+
+<body>
+  <%- include ("./parts/nav.ejs") %>
+  <%- include ("./parts/menu.ejs")%>
+  <div id="item-2">
       
-   
-      <div id="item-4">
-        <img  src="./img/logo.png" alt="" >
-      </div>
+  <%- include ("./parts/mensagem.ejs")%>  
+
+
+
+  </div>
+  <%- include ("./parts/rodape.ejs") %>
+    
+ 
+    <div id="item-4">
+      <img  src="./img/logo.png" alt="" >
     </div>
+  </div>
 
-  </body>
+</body>
 
-  </html>
+</html>
