--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -297,3 +297,262 @@ nav a:focus {
 	-moz-transform: translateY(0px);
 	transform: translateY(0px);
 }
+.formulario {
+
+	max-width: 750px;
+	text-align: center;
+	margin: 80px auto;
+  
+  }
+  
+  .formulario input, form textarea {
+  
+	border: 0;
+	outline: 0;
+	padding: 0.8em;
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-radius: 8px;
+	display: block;
+	width: 90%;
+	margin-top: 30px;
+	font-family:'open_sansregular';
+	font-size:16px;
+	color:#424242;
+	-moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+	resize: none;
+  }
+  
+  .formulario input:focus, .formulario textarea:focus {
+	 
+	color:#3cafe7; 
+	-moz-box-shadow: 0 0px 2px #3cafe7 !important;
+	-webkit-box-shadow: 0 0px 2px #3cafe7 !important;
+	box-shadow: 0 0px 2px #3cafe7 !important;
+  
+  }
+  
+  .formulario .btn-submit {
+  
+	color: #fff;
+	background: #3cafe7 ;
+	cursor: pointer;
+	transition: 0.5s;
+  
+  }
+  
+  .formulario .btn-submit:hover {
+   
+	background-color:#424242;
+	-moz-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+	-webkit-box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+	box-shadow: 0 1px 1px 1px rgba(170, 170, 170, 0.6);
+  
+  }
+  
+  .formulario textarea {
+  
+	height: 190px;
+	width: 73%;
+  
+  }
+  
+  .metade {
+  
+	float: left;
+	width: 48%;
+	margin-bottom: 1em;
+  
+  }
+  
+  .right { width:50%;}
+  
+  .left  { margin-right:2%; }
+  
+  @media (max-width: 768px) {
+	
+	.metade { width:100%; float:none; margin-bottom:0; }
+  
+  }
+
+  .texto-animado { 
+
+    width:100%; 
+    margin:auto; 
+    display: block;
+    overflow:hidden;
+    
+} 
+
+.texto-animado h1 {
+
+  margin-top: 5%;
+  font-size: 1.8em;
+  display: inline-block;
+  border-bottom: 1px #f4f3f3 solid;
+
+}
+
+.texto-animado h1 span {
+  
+  position: relative;
+  float: left;
+  font-family: 'open_sansbold';
+  color:#757575;
+
+}
+
+.texto-animado h1 span:first-child {
+
+  color: #f95e5e;
+  margin-right: 1rem;
+  font-weight:bold;
+  font-family: 'open_sansbold';
+
+}
+
+.texto-animado p {
+  
+    width: auto;
+    display: block;
+    font-size: 0.9em;
+    color: #b7b7b7;
+    padding-top: 0.3em;
+    letter-spacing: 4.5px;
+  
+}
+
+.delay-04 {
+  -moz-animation-delay: 0.4s;
+  -webkit-animation-delay: 0.4s;
+  animation-delay: 0.4s;
+}
+
+.delay-06 {
+  -moz-animation-delay: 0.6s;
+  -webkit-animation-delay: 0.6s;
+  animation-delay: 0.6s;
+}
+
+.delay-10 {
+  -moz-animation-delay: 1s;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.delay-15 {
+  -moz-animation-delay: 1.5s;
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
+/*Anima Texto*/
+.animated {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+/*Entrada Flip inX*/
+@-webkit-keyframes flipInX {
+  0% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  100% {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+@keyframes flipInX {
+  0% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-transition-timing-function: ease-in;
+    transition-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  100% {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
+  }
+}
+
+.flipInX {
+  -webkit-backface-visibility: visible !important;
+  backface-visibility: visible !important;
+  -webkit-animation-name: flipInX;
+  animation-name: flipInX;
+}
+/*Entrada Flip inX*/
+
+/*Entrada FadeIn*/
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
+}
