--- a/views/parts/nav.ejs
+++ b/views/parts/nav.ejs
@@ -1,13 +1,16 @@
+
 <div class="angry-grid">
     <div id="item-0">
       <nav class="bg line">
-
-        <a href="#" title="Cadastrar">Cadastrar</a>
+        <a href="/" title="Home" >Inicio</a>
+        <a href="/cadastrar" title="Cadastrar" >Cadastrar</a>
         <a href="#" title="Ver Cadastro">Verificar Cadastro</a>
         <a href="#" title="Ver Agenda">Agenda</a>
         <a href="#" title="Acessar Site">Site</a>
         <a href="#" title="Sobre">Sobre</a>
 
       </nav>
-
+ 
     </div>
+
+   
