--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -12,7 +12,7 @@
    
  #item-0 {
  
-    background-color: #a3a3a3; 
+    background-color: #ffffff; 
     grid-row-start: 1;
     grid-column-start: 2;
  
@@ -222,7 +222,7 @@ nav a {
 
 	position: relative;
 	display: inline-block;
-	margin: 16px 20px;
+	margin: 10px 20px;
 	outline: none;
 	color: #fff;
 	text-decoration: none;
