--- a/views/parts/menu.ejs
+++ b/views/parts/menu.ejs
@@ -33,7 +33,7 @@
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-chicken-fry"></i></div>
-                    <a href="#" class="clique"><span>Cadastrar</span></a>
+                    <a href="/cadastrar" class="clique"><span>Cadastrar</span></a>
 
                 </div>
 
