--- a/views/parts/mensagem.ejs
+++ b/views/parts/mensagem.ejs
@@ -1,9 +1,18 @@
+<% const texts = [`"Porque Deus amou o mundo de tal maneira que deu o seu Filho unigênito,
+para que todo aquele que nele crê não pereça, mas tenha a vida eterna." - João 3:16`, 
+`"Amarás o teu próximo como a ti mesmo." - Mateus 22:39`, `"Eu sou o caminho, e a verdade
+ e a vida." - João 14:6`,`"Bem-aventurados os pobres de espírito, porque deles é o
+  Reino dos Céus." - Mateus 5:3`,`"Porque Deus amou o mundo de tal maneira que deu o 
+  seu Filho unigênito, para que todo aquele que nele crê não pereça, mas tenha a vida 
+  eterna." - João 3:16`,`"Confia no Senhor de todo o teu coração, e não te estribes 
+  no teu próprio entendimento." - Provérbios 3:5`]; %>
+
 <div class="texto-animado">
                   
     <h1 class="animated fadeIn delay-04">
          <span class="animated flipInX delay-06">WebApp</span><span class="animated flipInX delay-10">Igreja 1.0</span>
     </h1>
                   
-    <p class="animated flipInX delay-15">"O Senhor é o meu pastor, nada me faltará." - Salmo 23:1.</p>
+    <p class="animated flipInX delay-15"><%= texts[Math.floor(Math.random() * texts.length)] %> </p>
                   
   </div>
