--- a/views/parts/menu.ejs
+++ b/views/parts/menu.ejs
@@ -5,7 +5,7 @@
 
             <li class="nav-item">
 
-                <div class="link-bg verde"></div>
+                <div class="link-bg azul"></div>
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-soft-drinks"></i></div>
@@ -17,7 +17,7 @@
 
             <li class="nav-item">
 
-                <div class="link-bg vermelho"></div>
+                <div class="link-bg azul"></div>
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-apple"></i></div>
@@ -29,7 +29,7 @@
 
             <li class="nav-item">
 
-                <div class="link-bg marrom"></div>
+                <div class="link-bg azul"></div>
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-chicken-fry"></i></div>
@@ -41,7 +41,7 @@
 
             <li class="nav-item">
 
-                <div class="link-bg laranja"></div>
+                <div class="link-bg azul"></div>
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-hot-dog"></i></div>
