--- a/views/parts/nav.ejs
+++ b/views/parts/nav.ejs
@@ -4,10 +4,10 @@
       <nav class="bg line">
         <a href="/" title="Home" >Inicio</a>
         <a href="/cadastrar" title="Cadastrar" >Cadastrar</a>
-        <a href="#" title="Ver Cadastro">Verificar Cadastro</a>
+        <a href="/verifcadastro" title="Ver Cadastro">Verificar Cadastro</a>
         <a href="#" title="Ver Agenda">Agenda</a>
         <a href="#" title="Acessar Site">Site</a>
-        <a href="#" title="Sobre">Sobre</a>
+        <a href="/sobre" title="Sobre">Sobre</a>
 
       </nav>
  
