--- a/views/sobre.ejs
+++ b/views/sobre.ejs
@@ -5,17 +5,18 @@
   <%- include ("./parts/menu.ejs")%>
   <div id="item-2">
       
-  <%- include ("./parts/cadastrar.ejs")%>  
+  <%- include ("./parts/sobre.ejs")%>  
 
 
-</div>
-<%- include ("./parts/rodape.ejs") %>
-  
 
-  <div id="item-4">
-    <img  src="./img/logo.png" alt="" >
   </div>
-
+  <%- include ("./parts/rodape.ejs") %>
+    
+ 
+    <div id="item-4">
+      <img  src="./img/logo.png" alt="" >
+    </div>
+  </div>
 
 </body>
 
