--- a/views/verifcadastro.ejs
+++ b/views/verifcadastro.ejs
@@ -1,12 +1,13 @@
+
+
 <%- include ("./parts/head.ejs") %>
 
 <body>
   <%- include ("./parts/nav.ejs") %>
   <%- include ("./parts/menu.ejs")%>
-  
   <div id="item-2">
       
-  <%- include ("./parts/mensagem.ejs")%>  
+  <%- include ("./parts/verifcadastro.ejs")%>  
 
 
 
