--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -15,7 +15,7 @@
     background-color: #ffffff; 
     grid-row-start: 1;
     grid-column-start: 2;
- 
+    display: block;
     grid-row-end: 2;
     grid-column-end: 3;
     height: 80px;
@@ -27,10 +27,10 @@
     background-color: #d0d9e6; 
     grid-row-start: 2;
     grid-column-start: 1;
- 
+    display: block;
     grid-row-end: 4;
     grid-column-end: 2;
-    height: 555px;
+    height: 683px;
     text-align: center;
     
  }
@@ -39,11 +39,12 @@
     background-color: #d0d9e6; 
     grid-row-start: 2;
     grid-column-start: 2;
- 
+    display: inline-block;
+    overflow: hidden;
     grid-row-end: 3;
     grid-column-end: 3;
     text-align: center;
-    height: 510px;
+    height: 640px;
     
  }
  #item-3 {
@@ -51,7 +52,7 @@
     background-color: #a0a0a0; 
     grid-row-start: 3;
     grid-column-start: 2;
- 
+    display: block;
     grid-row-end: 4;
     grid-column-end: 3;
     text-align: center;
@@ -96,7 +97,7 @@ ul{
 .nav-item {
 
 	position: relative;
-	background:#fff; 
+	background:#d0d9e6; 
 	box-shadow: 1px 0px 1.2px 0px #e3e3e3;
 	width: 100%;
 	height: 50px;
@@ -121,10 +122,7 @@ ul{
 
 }
 
-.link-bg.verde    { background-color:#2a0455; }
-.link-bg.vermelho { background-color:#ec3333; }
-.link-bg.marrom   { background-color:#c87874; }
-.link-bg.laranja  { background-color:#be756b; }
+.link-bg.azul    { background-color:#063ae7; }
 
 .link-title:hover a { color:#ffffff; }
 
@@ -206,7 +204,7 @@ span{
 /*768PX BREAKPOINT*/
 @media (min-width:48em){
 
-    .menu-sidebar { width:100%; }
+    .menu-sidebar { width:90%; }
 
 }
 
@@ -224,7 +222,7 @@ nav a {
 	display: inline-block;
 	margin: 10px 20px;
 	outline: none;
-	color: #fff;
+	color: #c2dbfd;
 	text-decoration: none;
 	font-weight: bold;
 	font-size: 1.3em;
@@ -244,7 +242,7 @@ nav a:focus {
 /* Menu */
 .line a {
 	padding: 10px;
-	color: #f7f7f7;
+	color: #d0d9e6;
 	font-weight: 700;
 	text-shadow: none;
 	-webkit-transition: color 0.3s;
@@ -258,7 +256,7 @@ nav a:focus {
 	left: 0;
 	width: 100%;
 	height: 2px;
-	background: #fff;
+	background: #d0d9e6;
 	content: '';
 	opacity: 0;
 	-webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -285,7 +283,7 @@ nav a:focus {
 
 .line a:hover,
 .line a:focus {
-	color: #fff;
+	color: #d0d9e6;
 }
 
 .line a:hover::before,
@@ -388,7 +386,7 @@ nav a:focus {
 
 .texto-animado h1 {
 
-  margin-top: 5%;
+  margin-top: 15%;
   font-size: 1.8em;
   display: inline-block;
   border-bottom: 1px #f4f3f3 solid;
@@ -417,8 +415,8 @@ nav a:focus {
   
     width: auto;
     display: block;
-    font-size: 0.9em;
-    color: #b7b7b7;
+    font-size: 1.5em;
+    color: #020202;
     padding-top: 0.3em;
     letter-spacing: 4.5px;
   
@@ -556,3 +554,142 @@ nav a:focus {
   -webkit-animation-name: fadeIn;
   animation-name: fadeIn;
 }
+
+/*formulario*/
+/*Tabela*/
+.style-tabela table{ float:left; border:1px solid #ccc; border-bottom:0; border-right:0; font-size:0.8em; }
+.style-tabela table tr td  { padding:0.5em; border:1px solid #ccc; border-top:0; border-left:0;}
+.style-tabela table td.top { background-color:#320db6; color:#fff; font-size:1.2em;}
+.style-tabela table td.top.center {text-align: center;}
+.style-tabela table td.total { text-align:left; font-weight: bold;}
+.style-tabela table td.top-toltip{ background-color:#207d97; height:25px;  color:#fff; font-size:16px;}
+.style-tabela tbody tr td    {padding:0.3em; border:1px solid #ccc; border-top:0; border-left:0;}
+.style-tabela tbody tr       {background-color:#fff; color:#666;}
+.style-tabela tbody tr:hover {background-color:#f4f4f4; color:#00bcc4;}
+ 
+
+.style-tabela tbody tr td .editar  { color:#00d549; font-size:1.2em; font-weight:bold; display:inline; text-decoration:none;} 
+.style-tabela tbody tr td .deletar { color:#bf303c; font-size:1.2em; font-weight:bold; display:inline; text-decoration:none; }
+
+.style-tabela tbody tr.mensagemAlerta { background-color:#fdeeef; color:#bf303c;}
+
+/*Classe adicionada no jquery*/
+#tabela tr.impar { background:#f4f4f4;  }
+#tabela tr.par   { background:#f1fafb;  }
+
+
+/*Se vocÊ Quiser Remover o scrip e usar só o Css Desabilite aqui*/
+/*#tabela tr:nth-child(odd)  { background-color:#ccc; }*/  
+/*#tabela tr:nth-child(even) { background-color:#f4f4f4; } */
+
+/*Sobre*/
+
+.profile-card {
+
+  background: rgb(13, 11, 146);
+  background: linear-gradient(90deg, rgb(30, 128, 240) 33%, rgb(118, 54, 238) 100%);
+  box-shadow: 1px 0px 1.2px 0px #e3e3e3;
+  border-radius: 5px;
+  padding: 0;
+  font-family: 'open_sansregular';
+  position: relative;
+  float: none;
+  margin: auto;
+  min-width: 280px;
+  max-width: 330px;
+  width: 100%;
+  color: #000000;
+  text-align: center;
+  line-height: 1.4em;
+  font-size: 12px;
+
+}
+
+.profile-card * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.profile-card .profile-image {
+    
+  display: inline-block;
+  width: 43%;
+  z-index: 1;
+  position: relative;
+  padding: 0;
+  border: 0;
+  margin-top: 50px;
+  border-radius: 3px;
+  overflow: hidden;
+  box-shadow: -1px 6px 21px -6px rgba(0,0,0,0.59);
+  -webkit-box-shadow: -1px 6px 21px -6px rgba(0,0,0,0.59);
+  -moz-box-shadow: -1px 6px 21px -6px rgba(0,0,0,0.59);
+
+}
+
+.profile-card .profile-image img {
+  max-width: 90%;
+  vertical-align: top;
+
+}
+
+.profile-card figcaption {
+  width: 100%;
+  background-color: #ffffff;
+  color: #555;
+  padding: 65px 22px 22px;
+  margin-top: -55px;
+  display: inline-block;
+}
+
+.profile-card h2 {
+  
+  display:block;
+  margin-bottom:10px;   
+  font-size:1.3em;
+  font-family:'open_sansregular';
+
+}
+
+.profile-card span {
+  
+  display:block;
+  margin-bottom:5px;
+  color: #8c8c8c;
+  font-weight: 400;
+  letter-spacing: 2px;
+  font-family: 'open_sanslight';
+
+}
+
+.profile-card p {
+  float:left;
+  margin-bottom:15px;
+  font-size:1em;
+  color:#717171;
+  font-family: 'open_sanslight';
+
+}
+
+.profile-card .icons {
+  text-align: center;
+  width: 100%;
+}
+
+.profile-card i {
+  
+  padding: 10px 2px;
+  display: inline-block;
+  font-size: 18px;
+  font-weight: normal;
+  color: #207e9e;
+  transition:0.4s;
+
+}
+
+.profile-card i:hover {
+
+  color:#3cd3d7;
+
+}
+
