--- a/views/parts/rodape.ejs
+++ b/views/parts/rodape.ejs
@@ -1,17 +1,18 @@
 <div id="item-3">
     <footer class="main_footer container">
 
-      <div class="content">
-  
-          <div class="colfooter">
-              
-            
-      <div class="main_footer_copy">
-            <a href="http://www.vmi-informatica.com.br" >VMI Informática- 2023, todos os direitos reservados   .</a>
-          <i class="icon icon-heart-3"></i>|     Desenvolvido por: Erasmo Cardoso
-      
-      </div>
-  
-  </footer>
+        <div class="content">
 
-  </div>
+            <div class="colfooter">
+
+
+                <div class="main_footer_copy">
+                    <a href="http://www.vmi-informatica.com.br">VMI Informática- 2023, todos os direitos reservados
+                        .</a>
+                    <i class="icon icon-heart-3"></i>| Desenvolvido por: Erasmo Cardoso
+
+                </div>
+
+    </footer>
+
+</div>
