--- a/views/parts/menu.ejs
+++ b/views/parts/menu.ejs
@@ -45,7 +45,7 @@
                 <div class="link-title">
 
                     <div class="icone"> <i class="icofont-hot-dog"></i></div>
-                    <a href="#" class="clique"><span>Agenda</span></a>
+                    <a href="#" class="clique"><span>Backup</span></a>
 
 
                 </div>
