--- a/views/editacadastro.ejs
+++ b/views/editacadastro.ejs
@@ -1,3 +1,5 @@
+
+
 <%- include ("./parts/head.ejs") %>
 
 <body>
@@ -12,9 +14,7 @@
   <%- include ("./parts/rodape.ejs") %>
 
 
-  <div id="item-4">
-    <img src="./img/logo.png" alt="">
-  </div>
+  <%- include ("./parts/logo.ejs") %>  
 
 
 </body>
