--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,11 +12,8 @@
 
   </div>
   <%- include ("./parts/rodape.ejs") %>
-    
- 
-    <div id="item-4">
-      <img  src="./img/logo.png" alt="" >
-    </div>
+  <%- include ("./parts/logo.ejs") %>  
+   
   </div>
 
 </body>
