--- a/views/parts/cadastrar.ejs
+++ b/views/parts/cadastrar.ejs
@@ -1,6 +1,7 @@
       
       <form class="formulario" method="post" action="/rotaform">
-                
+        <center><h2>Realize o Cadastro </h2> </center>
+        
         <div class="metade left">
 
           <input type="text" placeholder="Nome" required="" name="nome">
