--- a/views/parts/verifcadastro.ejs
+++ b/views/parts/verifcadastro.ejs
@@ -21,7 +21,7 @@
         
       <% verdados.forEach(verdados => { %>
        
-      <tr class="mensagemAlerta">
+      <tr class=" ">
         <td align="center"><%= verdados.id %></td>
         <td align="center"><%= verdados.nome %></td>
         <td align="center"><%= verdados.telefone %></td>
