--- a/views/parts/verifcadastro.ejs
+++ b/views/parts/verifcadastro.ejs
@@ -1,11 +1,12 @@
 <% let data = new Date(); %>
 
 
+
 <div class="style-tabela">
   <table id="tabela" border="0" cellpadding="0" cellspacing="0" width="100%">
-      
-       
-      <tbody>
+
+
+    <tbody>
       <tr>
         <td class="top center"><i class="icofont-users-alt-4"><strong>ID</strong></i></td>
         <td class="top center"><strong>Nome</strong></td>
@@ -18,30 +19,41 @@
     </tbody>
 
     <tbody>
-        
+
       <% verdados.forEach(verdados => { %>
-       
+
       <tr class=" ">
         <td align="center"><%= verdados.id %></td>
         <td align="center"><%= verdados.nome %></td>
         <td align="center"><%= verdados.telefone %></td>
+
+        <!--Calcula a Idade corretamente-->
         <% let dataAniversario = new Date(verdados.data); %>
-        <% let ano = dataAniversario; %>
-        <td align="center"><%= data.getFullYear() - ano.getFullYear() %> </td>
+        <% const hoje = new Date();%>
+        <%  const nascimento = new Date(dataAniversario);%>
+        <%  let idade = hoje.getFullYear() - nascimento.getFullYear();%>
+        <%  const meses = hoje.getMonth() - nascimento.getMonth();%>
+        <% if (meses < 0 || (meses === 0 && hoje.getDate() < nascimento.getDate())) {%>
+        <% idade--;%>
+        <% }%>
+        <% idade += meses / 12;%>
+        <td align="center"><%= idade.toFixed(0) %> </td>
+
         <td align="center"><%= verdados.endereco %> </td>
 
         <form action="/editacadastro/<%=verdados.id %>" method="post"></form>
         <input type="hidden" name="id" value="<%= verdados.id %>">
-        <td align="center"> <a href="/editacadastro/<%=verdados.id %>"><button class="botao_edit" >Edita</button></a> </td>
+        <td align="center"> <a href="/editacadastro/<%=verdados.id %>"><button class="botao_edit">Edita</button></a>
+        </td>
         </form>
 
         <form action="/delete" method="post">
           <input type="hidden" name="id" value="<%= verdados.id %>">
-        <td align="center"> <button class="botao_apag" >Apaga</button> </td>
+          <td align="center"> <button class="botao_apag">Apaga</button> </td>
         </form>
       </tr>
       <% }); %>
-      
+
 
     </tbody>
 
