--- a/views/parts/edita.ejs
+++ b/views/parts/edita.ejs
@@ -1,6 +1,6 @@
       
       <form class="formulario" method="post" action="/atualiza">
-                <center><h2>Atualize o Cadastro Número :  <%= edita.id %></h2> </center>
+                <center><h2>Verifica ou Atualize o Cadastro Número :  <%= edita.id %></h2> </center>
         <div class="metade left">
           <input type="hidden" placeholder="<%=edita.id %>" required="" name="id" value="<%=edita.id %>">
           <input type="text" placeholder="Nome" required="" name="nome" value="<%=edita.nome %>">
