--- a/views/parts/verifcadastro.ejs
+++ b/views/parts/verifcadastro.ejs
@@ -46,7 +46,7 @@
 
         <form action="/editacadastro/<%=verdados.id %>" method="post"></form>
         <input type="hidden" name="id" value="<%= verdados.id %>">
-        <td align="center"> <a href="/editacadastro/<%=verdados.id %>"><button class="botao_edit">Edita</button></a>
+        <td align="center"> <a href="/editacadastro/<%=verdados.id %>"><button class="botao_edit">Verifica</button></a>
         </td>
         </form>
 
