--- a/public/css/stylos.css
+++ b/public/css/stylos.css
@@ -1,18 +1,23 @@
+body{
+  background-color: #c0daff;
+}
+
 .angry-grid {
     display: grid; 
  
     grid-template-rows: 4rem auto 45px;
     grid-template-columns: 16rem auto;
-    
+    background-color: #c0daff;
     gap: 3px;
     height: 100%;
+    box-shadow: 1px 5px 5px black;
     
     
  }
    
  #item-0 {
  
-    background-color: #ffffff; 
+    background-color: #a0a0a0; 
     grid-row-start: 1;
     grid-column-start: 2;
     display: block;
@@ -20,11 +25,14 @@
     grid-column-end: 3;
     height: 80px;
     text-align: center;
+    border-color: #000;
+    box-shadow: 1px 5px 5px black;
+    
     
  }
  #item-1 {
  
-    background-color: #d0d9e6; 
+    background-color: #c0daff; 
     grid-row-start: 2;
     grid-column-start: 1;
     display: block;
@@ -33,23 +41,26 @@
     height: 683px;
     text-align: center;
     
+    
  }
  #item-2 {
  
-    background-color: #d0d9e6; 
+    background-color: #c0daff; 
     grid-row-start: 2;
     grid-column-start: 2;
-    display: inline-block;
+    display: block;
     overflow: hidden;
     grid-row-end: 3;
     grid-column-end: 3;
     text-align: center;
-    height: 640px;
+    height: auto;
+    box-shadow: 1px 5px 5px black;
+    
     
  }
  #item-3 {
  
-    background-color: #a0a0a0; 
+    background-color: #c0daff; 
     grid-row-start: 3;
     grid-column-start: 2;
     display: block;
@@ -57,6 +68,8 @@
     grid-column-end: 3;
     text-align: center;
     height: 40px;
+    
+   
     
     
  }
@@ -69,6 +82,8 @@
     grid-row-end: 2;
     grid-column-end: 2;
     text-align: center;
+    box-shadow: 1px 5px 5px black;
+    
    
     
  }
@@ -83,6 +98,7 @@
     float: none;
     width: 100%;
     margin-top: 100px;
+    box-shadow: 1px 5px 5px black;
 }
 
 ul{
@@ -91,19 +107,20 @@ ul{
     padding:0px;
     list-style-type:none;
     -webkit-backface-visibility: hidden; 
-    backface-visibility: hidden;  
+    backface-visibility: hidden; 
+    box-shadow: 1px 5px 5px black; 
 }
 
 .nav-item {
 
 	position: relative;
 	background:#d0d9e6; 
-	box-shadow: 1px 0px 1.2px 0px #e3e3e3;
 	width: 100%;
 	height: 50px;
 	margin-bottom: 2px;
 	border-radius: 6px;
 	overflow: hidden;
+  box-shadow: 1px 5px 5px black;
 
 }
 
@@ -214,6 +231,7 @@ nav.bg {
     float:left; 
     text-align:center;  
     background: linear-gradient(90deg, #2764e7 0%, #04033a 100%);
+    box-shadow: 1px 5px 5px black;
 }
 
 nav a {
@@ -300,6 +318,9 @@ nav a:focus {
 	max-width: 750px;
 	text-align: center;
 	margin: 40px auto;
+  border: solid;
+  border-color: #000;
+  box-shadow: 10px 9px 5px black;
   
   }
   
@@ -555,7 +576,8 @@ nav a:focus {
 
 /*formulario*/
 /*Tabela*/
-.style-tabela table{ float:left; border:1px solid #ccc; border-bottom:0; border-right:0; font-size:0.8em; }
+.style-tabela table{ float:left; border:1px solid #ccc; border-bottom:0; border-right:0; font-size:0.8em;  box-shadow: 1px 5px 5px black;
+}
 .style-tabela table tr td  { padding:0.5em; border:1px solid #ccc; border-top:0; border-left:0;}
 .style-tabela table td.top { background-color:#320db6; color:#fff; font-size:1.2em;}
 .style-tabela table td.top.center {text-align: center;}
@@ -572,7 +594,7 @@ nav a:focus {
 .style-tabela tbody tr.mensagemAlerta { background-color:#fdeeef; color:#000000;}
 
 /*Classe adicionada no jquery*/
-#tabela tr.impar { background:#f4f4f4;  }
+#tabela tr.impar { background:#f4f4f4;   }
 #tabela tr.par   { background:#f1fafb;  }
 
 
